test/must_fail/api/must_fail_script_args.ngjs
#!/usr/bin/env ngspicejs
// no args needed
// linter: ngspicejs-lint
"use strict";

script_args(1);
